2006-04-21  Sven Neumann  <sven@gimp.org>

	Applied a slightly modified version of a patch from Lode Leroy
	(bug #336183):

	* app/base/gimphistogram.[ch]: added new function
	gimp_histogram_get_threshold() that returns an optimal
	binarization threshold.
	
	* app/tools/gimpthresholdtool.c: use the new function to
	initialize the Threshold tool.

2006-04-21  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimputils.c (gimp_utf8_strtrim): strlen != sizeof

2006-04-21  Sven Neumann  <sven@gimp.org>

	* app/base/curves.c
	* app/widgets/gimpsessioninfo.c: minor code cleanup, removed
	trailing whitespace.

2006-04-20  Simon Budig  <simon@gimp.org>

	* app/base/curves.c: implemented a new interpolation for the
	"smooth" curve type. This fixes the artefacts as described in
	bug #169078 although there definitely is room for improvement.

	This has an impact on the API as now the curves used by the
	gimp-curves-spline PDB call change. I do however believe, that
	the change is for good and the old behaviour was simply buggy.

2006-04-20  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpsessioninfo.c (get_appropriate_monitor): New
	helper function. Same functionality as
	gdk_screen_get_monitor_at_window(), except that it takes a window
	geometry as parameter and not the window itself.
	(gimp_session_info_set_geometry): Make sure the window is
	completely inside a monitor. (#339099, #324254)

2006-04-20  Simon Budig  <simon@gimp.org>

	* plug-ins/common/convmatrix.c: only access existing toggle buttons.
	Fixes bug #339124.

2006-04-20  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: convolve_region() takes a
	const matrix parameter.

	* app/paint/gimpconvolve.c
	* app/tools/gimpiscissorstool.c: use const convolution matrices.

	* libgimpbase/gimputils.c (gimp_utf8_strtrim): avoid another small
	relocation.

	* modules/colorsel_cmyk.c
	* regexrepl/regex.c: use const arrays of const strings.

2006-04-19  Simon Budig  <simon@gimp.org>
